base node 추가, 열거형 라이브러리 추가, 머신러닝 테스트 함수 별개로 분리

--- a/ML/ML.vcxproj
+++ b/ML/ML.vcxproj
@@ -142,9 +142,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="BaseNode.h" />
+    <ClInclude Include="EnumLibrary.h" />
     <ClInclude Include="Perceptron.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BaseNode.cpp" />
     <ClCompile Include="Perceptron.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
