--- a/ML/ML.vcxproj.filters
+++ b/ML/ML.vcxproj.filters
@@ -18,9 +18,18 @@
     <ClInclude Include="Perceptron.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="BaseNode.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="EnumLibrary.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Perceptron.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="BaseNode.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
