--- a/ML/ML.vcxproj
+++ b/ML/ML.vcxproj
@@ -102,6 +102,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -144,10 +145,12 @@
   <ItemGroup>
     <ClInclude Include="BaseNode.h" />
     <ClInclude Include="EnumLibrary.h" />
+    <ClInclude Include="Graph.h" />
     <ClInclude Include="Perceptron.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BaseNode.cpp" />
+    <ClCompile Include="Graph.cpp" />
     <ClCompile Include="Perceptron.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
